# 24b0334_SOC_endterm

./: CMakeList.txt  README.md  ml_trading_model.py  requirements.txt  setup.py  trading_strategies.cpp
data/: AAPL_testing.csv
same structure/cpp/: rsi_strategy.cpp  supertrend_strategy.cpp
same structure/data/: AAPL_training.csv
same structure/src/cpp/: rsi_strategy.cpp
same structure/src/python/: data_processor.py
same_file_structure_as_shared/cpp/: macd_strategy.cpp
same_file_structure_as_shared/src/: main.py
same_file_structure_as_shared/src/cpp/: CMakeLists.txt  bindings.cpp  data_types.h  macd_strategy.cpp  macd_strategy.h  rsi_strategy.h  supertrend_strategy.h
same_file_structure_as_shared/src/python/: model.py  train.py
src/cpp/: supertrend_strategy.cpp
src/python/: test.py
